--- a/aboutus.html
+++ b/aboutus.html
@@ -342,7 +342,7 @@
                                     <br>
                                     <abbr title="Fax"><strong>Fax:</strong></abbr> (91) 11 4752 1433
                                     <br>
-                                    <abbr title="Email Address"><strong>Email:</strong></abbr> info@canvas.com
+                                    <abbr title="Email Address"><strong>Email:</strong></abbr> info@ubnsoftsolutions.com
                                 </div>
 
                             </div>
