--- a/search.html
+++ b/search.html
@@ -750,7 +750,7 @@
 									</address>
 									<abbr title="Phone Number"><strong>Phone:</strong></abbr> (91) 8547 632521<br>
 									<abbr title="Fax"><strong>Fax:</strong></abbr> (91) 11 4752 1433<br>
-									<abbr title="Email Address"><strong>Email:</strong></abbr> info@canvas.com
+									<abbr title="Email Address"><strong>Email:</strong></abbr> info@ubnsoftsolutions.com
 								</div>
 
 							</div>
