updated file extensions

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="slider-parallax-inner">
                 <div class="swiper-container swiper-parent">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide dark" style="background-image: url('images/slider/swiper/hometech1.jpg');">
+                        <div class="swiper-slide dark" style="background-image: url('images/slider/swiper/hometech1.JPG');">
                             <div class="container clearfix">
                                 <div class="slider-caption slider-caption-center">
                                     <h2 data-caption-animate="fadeInUp">Ideas...</h2>
@@ -265,7 +265,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide" style="background-image: url('images/slider/swiper/city1.jpg');">
+                        <div class="swiper-slide" style="background-image: url('images/slider/swiper/city1.JPG');">
                             <div class="container clearfix">
                                 <div class="slider-caption slider-caption-center">
                                     <h2 data-caption-animate="fadeInUp">Innovation</h2>
@@ -273,7 +273,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide" style="background-image: url('images/slider/swiper/busycity1.jpg');">
+                        <div class="swiper-slide" style="background-image: url('images/slider/swiper/busycity1.JPG');">
                             <div class="container clearfix">
                                 <div class="slider-caption">
                                     <h2 data-caption-animate="fadeInUp">Satisfaction</h2>
@@ -304,7 +304,7 @@
                     <div class="container clear-bottommargin clearfix">
                         <div class="row topmargin-sm clearfix serviceiconrow">
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="/images/home/salesforcelogo1.jpg">
+                                <img class="iconborder" src="/images/home/salesforcelogo1.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">Salesforce</h4>
                                 </div>
@@ -314,7 +314,7 @@
                                 <a href="#" class="button button-rounded button-small">Learn more</a>
                             </div>
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="/images/home/bi.jpg">
+                                <img class="iconborder" src="/images/home/bi.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">BI &amp; Analytics</h4>
                                 </div>
@@ -324,7 +324,7 @@
                                 <a href="#" class="button button-rounded button-small">Learn more</a>
                             </div>
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="/images/home/db3.jpg">
+                                <img class="iconborder" src="/images/home/db3.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">Data Warehousing</h4>
                                 </div>
@@ -334,7 +334,7 @@
                                 <a href="#" class="button button-rounded button-small">Learn more</a>
                             </div>
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="/images/home/icon.jpg">
+                                <img class="iconborder" src="/images/home/icon.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">Mobile</h4>
                                 </div>
@@ -359,10 +359,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/aspnetmvclarge.jpg" alt="ASPNET MVC">
+                                <img src="images/showcase/aspnetmvclarge.JPG" alt="ASPNET MVC">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="/pdf/aspnet.pdf" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -376,10 +376,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/sharepointlarge.jpg" alt="Sharepoint Large">
+                                <img src="images/showcase/sharepointlarge.JPG" alt="Sharepoint Large">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="/pdf/sharepoint.pdf" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -393,10 +393,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/javalarge.jpg" alt="Java Large">
+                                <img src="images/showcase/javalarge.JPG" alt="Java Large">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="/pdf/java.pdf" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -410,10 +410,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/mobilelarge.jpg" alt="Mobile Large">
+                                <img src="images/showcase/mobilelarge.JPG" alt="Mobile Large">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="/pdf/mobile.pdf" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -427,10 +427,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/mvcnetlarge.jpg" alt="MVCNET Large">
+                                <img src="images/showcase/mvcnetlarge.JPG" alt="MVCNET Large">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="/pdf/mvcnet.pdf" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -444,10 +444,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/salesforcelarge.jpg" alt="Salesforce Large">
+                                <img src="images/showcase/salesforcelarge.JPG" alt="Salesforce Large">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="/pdf/salesforce.pdf" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -470,7 +470,7 @@
                     </div>
                 </div>
                 <!-- BEGINNING OF TESTIMONIALS SECTION -->
-                <div class="section parallax dark nobottommargin" style="background-image: url('images/testimonials/testimonialbg1.jpg'); padding: 100px 0;" data-stellar-background-ratio="0.4">
+                <div class="section parallax dark nobottommargin" style="background-image: url('images/testimonials/testimonialbg1.JPG'); padding: 100px 0;" data-stellar-background-ratio="0.4">
                     <div class="heading-block center">
                         <h3>What Clients Say?</h3>
                     </div>
@@ -479,7 +479,7 @@
                             <div class="slider-wrap">
                                 <div class="slide">
                                     <div class="testi-image">
-                                        <a href="#"><img src="images/testimonials/aspmvc-testi.jpg" alt="Customer Testimonails"></a>
+                                        <a href="#"><img src="images/testimonials/aspmvc-testi.JPG" alt="Customer Testimonails"></a>
                                     </div>
                                     <div class="testi-content">
                                         <p>We are very satisfied and happy to have found UBNSoft as our offshore development partner. The integration of SalesForce CRM into the application works like a charm. Our interaction with present and prospective customers has notched up to a whole new level. We are quite happy with that.</p>
@@ -490,7 +490,7 @@
                                 </div>
                                 <div class="slide">
                                     <div class="testi-image">
-                                        <a href="#"><img src="images/testimonials/sharepoint-testi.jpg" alt="Customer Testimonails"></a>
+                                        <a href="#"><img src="images/testimonials/sharepoint-testi.JPG" alt="Customer Testimonails"></a>
                                     </div>
                                     <div class="testi-content">
                                         <p>UBNSoft delivered beyond expectations. They get the job done and they do good work. The app has a fresh look and feel. We get real time business scenario updates. Retrieving of our dashboard reports is now hassle-free. No technical difficulties, no hiccups. Folks continue with your stellar service.</p>
@@ -501,7 +501,7 @@
                                 </div>
                                 <div class="slide">
                                     <div class="testi-image">
-                                        <a href="#"><img src="images/testimonials/java-testi.jpg" alt="Java Testimonial"></a>
+                                        <a href="#"><img src="images/testimonials/java-testi.JPG" alt="Java Testimonial"></a>
                                     </div>
                                     <div class="testi-content">
                                         <p>UBNSoft wonderful service is what makes us come back to them each time. The integration of the CTI component into the application was seamless. The call snoofing facility is top-notch. Thanks for that.</p>
@@ -512,7 +512,7 @@
                                 </div>
                                 <div class="slide">
                                     <div class="testi-image">
-                                        <a href="#"><img src="images/testimonials/xamarin-testi.jpg" alt="Java Testimonial"></a>
+                                        <a href="#"><img src="images/testimonials/xamarin-testi.JPG" alt="Java Testimonial"></a>
                                     </div>
                                     <div class="testi-content">
                                         <p>You and your team at UBNSoft continues to amaze us. The woking of the app in offline mode has been a true revelation for the team. Report generation was never this easy. Please pass along my sincere thanks to your staff.</p>
@@ -523,7 +523,7 @@
                                 </div>
                                 <div class="slide">
                                     <div class="testi-image">
-                                        <a href="#"><img src="images/testimonials/salesforce-testi.jpg" alt="Java Testimonial"></a>
+                                        <a href="#"><img src="images/testimonials/salesforce-testi.JPG" alt="Java Testimonial"></a>
                                     </div>
                                     <div class="testi-content">
                                         <p>Thanks for all of your support! UBNSoft is by far the best of all software companies we have come across. Java Integration has made a world of difference. Data handling from a third party is very easy. Till date we are yet to face any server related issue. Keep up the good work.</p>
@@ -553,7 +553,7 @@
                     <div class="container">
                         <div class="row clientsrow">
                             <div class="col-lg-6 ">
-                                <img data-animate="fadeInLeft" class="img-responsive" src="images/girlcomputer.jpg" alt="GirlComputer">
+                                <img data-animate="fadeInLeft" class="img-responsive" src="images/girlcomputer.JPG" alt="GirlComputer">
                             </div>
                             <div class="col-lg-6">
                                 <div class="competitor">
