--- a/testhome.html
+++ b/testhome.html
@@ -257,7 +257,7 @@
             <div class="slider-parallax-inner">
                 <div class="swiper-container swiper-parent">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide dark" style="background-image: url('images/slider/swiper/hometech1.jpg');">
+                        <div class="swiper-slide dark" style="background-image: url('images/slider/swiper/hometech1.JPG');">
                             <div class="container clearfix">
                                 <div class="slider-caption slider-caption-center">
                                     <h2 data-caption-animate="fadeInUp">Ideas...</h2>
@@ -265,7 +265,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide" style="background-image: url('images/slider/swiper/city1.jpg');">
+                        <div class="swiper-slide" style="background-image: url('images/slider/swiper/city1.JPG');">
                             <div class="container clearfix">
                                 <div class="slider-caption slider-caption-center">
                                     <h2 data-caption-animate="fadeInUp">Innovation</h2>
@@ -273,7 +273,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide" style="background-image: url('images/slider/swiper/busycity1.jpg');">
+                        <div class="swiper-slide" style="background-image: url('images/slider/swiper/busycity1.JPG');">
                             <div class="container clearfix">
                                 <div class="slider-caption">
                                     <h2 data-caption-animate="fadeInUp">Satisfaction</h2>
@@ -304,7 +304,7 @@
                     <div class="container clear-bottommargin clearfix">
                         <div class="row topmargin-sm clearfix serviceiconrow">
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="/images/home/salesforcelogo1.jpg">
+                                <img class="iconborder" src="/images/home/salesforcelogo1.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">Salesforce</h4>
                                 </div>
@@ -314,7 +314,7 @@
                                 <a href="#" class="button button-rounded button-small">Learn more</a>
                             </div>
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="/images/home/bi.jpg">
+                                <img class="iconborder" src="/images/home/bi.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">BI &amp; Analytics</h4>
                                 </div>
@@ -324,7 +324,7 @@
                                 <a href="#" class="button button-rounded button-small">Learn more</a>
                             </div>
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="/images/home/db3.jpg">
+                                <img class="iconborder" src="/images/home/db3.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">Data Warehousing</h4>
                                 </div>
@@ -334,7 +334,7 @@
                                 <a href="#" class="button button-rounded button-small">Learn more</a>
                             </div>
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="/images/home/icon.jpg">
+                                <img class="iconborder" src="/images/home/icon.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">Mobile</h4>
                                 </div>
@@ -352,10 +352,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/test/javalarge.jpg" alt="Portfolio Title">
+                                <img src="images/showcase/test/javalarge.JPG" alt="Portfolio Title">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -370,10 +370,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/test/javalarge.jpg" alt="Portfolio Title">
+                                <img src="images/showcase/test/javalarge.JPG" alt="Portfolio Title">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -388,10 +388,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/test/javalarge.jpg" alt="Portfolio Title">
+                                <img src="images/showcase/test/javalarge.JPG" alt="Portfolio Title">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -408,10 +408,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/test/javalarge.jpg" alt="Portfolio Title">
+                                <img src="images/showcase/test/javalarge.JPG" alt="Portfolio Title">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -426,10 +426,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/test/javalarge.jpg" alt="Portfolio Title">
+                                <img src="images/showcase/test/javalarge.JPG" alt="Portfolio Title">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -444,10 +444,10 @@
                         <!-- Portfolio Image -->
                         <div class="portfolio-image">
                             <a href="portfolio-single.html">
-                                <img src="images/showcase/test/javalarge.jpg" alt="Portfolio Title">
+                                <img src="images/showcase/test/javalarge.JPG" alt="Portfolio Title">
                             </a>
                             <div class="portfolio-overlay">
-                                <a href="images/portfolio/full/1.jpg" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
+                                <a href="images/portfolio/full/1.JPG" class="left-icon" data-lightbox="image"><i class="icon-line-plus"></i></a>
                                 <a href="portfolio-single.html" class="right-icon"><i class="icon-line-ellipsis"></i></a>
                             </div>
                         </div>
@@ -472,7 +472,7 @@
                     </div>
                 </div>
                 <!-- BEGINNING OF TESTIMONIALS SECTION -->
-                <div class="section parallax dark nobottommargin" style="background-image: url('images/testimonials/testimonialbg1.jpg'); padding: 100px 0;" data-stellar-background-ratio="0.4">
+                <div class="section parallax dark nobottommargin" style="background-image: url('images/testimonials/testimonialbg1.JPG'); padding: 100px 0;" data-stellar-background-ratio="0.4">
                     <div class="heading-block center">
                         <h3>What Clients Say?</h3>
                     </div>
@@ -481,7 +481,7 @@
                             <div class="slider-wrap">
                                 <div class="slide">
                                     <div class="testi-image">
-                                        <a href="#"><img src="images/testimonials/3.jpg" alt="Customer Testimonails"></a>
+                                        <a href="#"><img src="images/testimonials/3.JPG" alt="Customer Testimonails"></a>
                                     </div>
                                     <div class="testi-content">
                                         <p>Similique fugit repellendus expedita excepturi iure perferendis provident quia eaque. Repellendus, vero numquam?</p>
@@ -493,7 +493,7 @@
                                 </div>
                                 <div class="slide">
                                     <div class="testi-image">
-                                        <a href="#"><img src="images/testimonials/2.jpg" alt="Customer Testimonails"></a>
+                                        <a href="#"><img src="images/testimonials/2.JPG" alt="Customer Testimonails"></a>
                                     </div>
                                     <div class="testi-content">
                                         <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
@@ -505,7 +505,7 @@
                                 </div>
                                 <div class="slide">
                                     <div class="testi-image">
-                                        <a href="#"><img src="images/testimonials/1.jpg" alt="Customer Testimonails"></a>
+                                        <a href="#"><img src="images/testimonials/1.JPG" alt="Customer Testimonails"></a>
                                     </div>
                                     <div class="testi-content">
                                         <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum!</p>
@@ -525,7 +525,7 @@
                     <div class="container">
                         <div class="row clientsrow">
                             <div class="col-lg-6 ">
-                                <img data-animate="fadeInLeft" class="img-responsive" src="images/girlcomputer.jpg" alt="GirlComputer">
+                                <img data-animate="fadeInLeft" class="img-responsive" src="images/girlcomputer.JPG" alt="GirlComputer">
                             </div>
                             <div class="col-lg-6">
                                 <div class="heading-block-white">
