--- a/profile.html
+++ b/profile.html
@@ -280,7 +280,7 @@
 
         <!-- BEGIN HEADER BANNER -->
         <div class="clear"></div>
-        <div class="container-fluid" style="background-image: url('/images/about/profileban.jpg'); background-size: cover; height: 600px;">
+        <div class="container-fluid" style="background-image: url('/images/about/profileban.JPG'); background-size: cover; height: 600px;">
         </div>
 
         <!-- END HEADER BANNER -->
