--- a/travel.html
+++ b/travel.html
@@ -280,7 +280,7 @@
 
         <!-- BEGIN HEADER BANNER -->
         <div class="clear"></div>
-        <div class="container-fluid" style="background-image: url('/images/industries/travelban.jpg'); background-size: cover; height: 600px;">
+        <div class="container-fluid" style="background-image: url('/images/industries/travelban.JPG'); background-size: cover; height: 600px;">
         </div>
 
         <!-- END HEADER BANNER -->
