--- a/ubnadvantage.html
+++ b/ubnadvantage.html
@@ -280,7 +280,7 @@
 
         <!-- BEGIN HEADER BANNER -->
         <div class="clear"></div>
-        <div class="container-fluid" style="background-image: url('/images/about/ubnadvantageban.jpg'); background-size: cover; height: 600px;">
+        <div class="container-fluid" style="background-image: url('/images/about/ubnadvantageban.JPG'); background-size: cover; height: 600px;">
         </div>
 
         <!-- END HEADER BANNER -->
