--- a/aboutus.html
+++ b/aboutus.html
@@ -281,7 +281,7 @@
 
         <!-- BEGIN HEADER BANNER -->
         <div class="clear"></div>
-        <div class="container-fluid" style="background-image: url('/images/about/aboutban.JPG'); background-size: cover; height: 600px;">
+        <div class="container-fluid" style="background-image: url('htps:/drazyhaze.github.io/images/home/salesforcelogo1.JPG'); background-size: cover; height: 600px;">
         </div>
 
         <!-- END HEADER BANNER -->
