--- a/businessint.html
+++ b/businessint.html
@@ -281,7 +281,7 @@
 
         <!-- BEGIN HEADER BANNER -->
         <div class="clear"></div>
-        <div class="container-fluid" style="background-image: url('/images/services/businessintban.JPG'); background-size: cover; height: 600px;">
+        <div class="container-fluid" style="background-image: url('https://zcassini.github.io/UBNSOFT/images//services/businessintban.JPG'); background-size: cover; height: 600px;">
         </div>
 
         <!-- END HEADER BANNER -->
