--- a/careers.html
+++ b/careers.html
@@ -254,7 +254,7 @@
     <!-- #header end -->
     <!-- BEGIN HEADER BANNER -->
     <div class="clear"></div>
-    <div class="container-fluid" style="background-image: url('/images/industries/engineerban.JPG'); background-size: cover; height: 600px;">
+    <div class="container-fluid" style="background-image: url('https://zcassini.github.io/UBNSOFT/images//industries/engineerban.JPG'); background-size: cover; height: 600px;">
     </div>
     <!-- END HEADER BANNER -->
     <!-- Content Begin Of About Page -->
