--- a/banking.html
+++ b/banking.html
@@ -280,7 +280,7 @@
 
         <!-- BEGIN HEADER BANNER -->
         <div class="clear"></div>
-        <div class="container-fluid" style="background-image: url('https://zcassini.github.io/UBNSOFT/images//industries/businessban.JPG'); background-size: cover; height: 600px;">
+        <div class="container-fluid" style="background-image: url('https://drazyhaze.github.io/UBNSOFT/images//industries/businessban.JPG'); background-size: cover; height: 600px;">
         </div>
 
         <!-- END HEADER BANNER -->
