--- a/corporatesocial.html
+++ b/corporatesocial.html
@@ -280,7 +280,7 @@
 
         <!-- BEGIN HEADER BANNER -->
         <div class="clear"></div>
-        <div class="container-fluid" style="background-image: url('https://zcassini.github.io/UBNSOFT/images//about/corpsocban.JPG'); background-size: cover; height: 600px; background-position: 50% 0;">
+        <div class="container-fluid" style="background-image: url('https://drazyhaze.github.io/UBNSOFT/images//about/corpsocban.JPG'); background-size: cover; height: 600px; background-position: 50% 0;">
         </div>
 
         <!-- END HEADER BANNER -->
