--- a/dedicatedcoc.html
+++ b/dedicatedcoc.html
@@ -254,7 +254,7 @@
     <!-- #header end -->
     <!-- BEGIN HEADER BANNER -->
     <div class="clear"></div>
-    <div class="container-fluid" style="background-image: url('https://zcassini.github.io/UBNSOFT/images//ourapproach/developmentban.JPG'); background-size: cover; height: 600px;">
+    <div class="container-fluid" style="background-image: url('https://drazyhaze.github.io/UBNSOFT/images//ourapproach/developmentban.JPG'); background-size: cover; height: 600px;">
     </div>
     <!-- END HEADER BANNER -->
     <!-- Content Begin Of About Page -->
