--- a/testhome.html
+++ b/testhome.html
@@ -304,7 +304,7 @@
                     <div class="container clear-bottommargin clearfix">
                         <div class="row topmargin-sm clearfix serviceiconrow">
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="https://zcassini.github.io/UBNSOFT/images/home/salesforcelogo1.JPG">
+                                <img class="iconborder" src="https://drazyhaze.github.io/UBNSOFT/images/home/salesforcelogo1.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">Salesforce</h4>
                                 </div>
@@ -314,7 +314,7 @@
                                 <a href="#" class="button button-rounded button-small">Learn more</a>
                             </div>
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="https://zcassini.github.io/UBNSOFT/images/home/bi.JPG">
+                                <img class="iconborder" src="https://drazyhaze.github.io/UBNSOFT/images/home/bi.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">BI &amp; Analytics</h4>
                                 </div>
@@ -324,7 +324,7 @@
                                 <a href="#" class="button button-rounded button-small">Learn more</a>
                             </div>
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="https://zcassini.github.io/UBNSOFT/images/home/db3.JPG">
+                                <img class="iconborder" src="https://drazyhaze.github.io/UBNSOFT/images/home/db3.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">Data Warehousing</h4>
                                 </div>
@@ -334,7 +334,7 @@
                                 <a href="#" class="button button-rounded button-small">Learn more</a>
                             </div>
                             <div class="col-md-3 bottommargin">
-                                <img class="iconborder" src="https://zcassini.github.io/UBNSOFT/images/home/icon.JPG">
+                                <img class="iconborder" src="https://drazyhaze.github.io/UBNSOFT/images/home/icon.JPG">
                                 <div class="heading-block nobottomborder" style="margin-bottom: 15px;">
                                     <h4 class="headingblockmargin">Mobile</h4>
                                 </div>
