updated html and hrefs

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                                 <li><a href="http://wordpress.org/support/forum/requests-and-feedback">Enterprise ADM</a></li>
                                 <li><a href="http://wordpress.org/extend/plugins/">Enterprise Mobility</a></li>
                                 <li><a href="http://wordpress.org/support/">Business Intelligence and Analytics</a></li>
-                                <li><a href="http://wordpress.org/extend/themes/">Data Warehouse</a></li>
+                                <li><a href="careers.html">Data Warehouse</a></li>
                                 <li><a href="#">CRM Solutions</a></li>
                             </ul>
                         </div>
@@ -682,7 +682,7 @@
             <div id="copyrights">
                 <div class="container clearfix">
                     <div class="col_half">
-                        Copyrights &amp;copy; 2015 UBNSoft Solutions | Developed by <a href="http://nlbstudios.com/" class="nlb" target="_blank">NLB</a> <a href="http://nlbstudios.com/" target="_blank" class="nlbs">Studios</a>
+                        Copyrights &#169; 2015 UBNSoft Solutions | Developed by <a href="http://nlbstudios.com/" class="nlb" target="_blank">NLB</a> <a href="http://nlbstudios.com/" target="_blank" class="nlbs">Studios</a>
                         <br>
                         <div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
                     </div>
