--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="SemiColonWeb" />
+	<meta name="author" content="NLB Studios" />
 
 	<!-- Stylesheets
 	============================================= -->
@@ -768,7 +768,7 @@
 									<li><a href="http://wordpress.org/support/forum/requests-and-feedback">Feedback</a></li>
 									<li><a href="http://wordpress.org/extend/plugins/">Plugins</a></li>
 									<li><a href="http://wordpress.org/support/">Support Forums</a></li>
-									<li><a href="http://wordpress.org/extend/themes/">Themes</a></li>
+									<li><a href="careers.html">Themes</a></li>
 									<li><a href="http://wordpress.org/news/">WordPress Blog</a></li>
 									<li><a href="http://planet.wordpress.org/">WordPress Planet</a></li>
 								</ul>
@@ -890,7 +890,7 @@
 			<div id="copyrights">
 				<div class="container clearfix">
 					<div class="col_half">
-						Copyrights &amp;copy; 2015 UBNSoft Solutions | Developed by <a href="http://nlbstudios.com/" class="nlb" target="_blank">NLB</a> <a href="http://nlbstudios.com/" target="_blank" class="nlbs">Studios</a>
+						Copyrights &#169; 2015 UBNSoft Solutions | Developed by <a href="http://nlbstudios.com/" class="nlb" target="_blank">NLB</a> <a href="http://nlbstudios.com/" target="_blank" class="nlbs">Studios</a>
 						<br>
 						<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
 					</div>
