--- a/businessint.html
+++ b/businessint.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="SemiColonWeb" />
+    <meta name="author" content="NLB Studios" />
 
     <!-- Stylesheets
 	============================================= -->
@@ -450,7 +450,7 @@
                                     <li><a href="http://wordpress.org/support/forum/requests-and-feedback">Engagement Models</a></li>
                                     <li><a href="http://wordpress.org/extend/plugins/">Blogs</a></li>
                                     <li><a href="http://wordpress.org/support/">Sitemap</a></li>
-                                    <li><a href="http://wordpress.org/extend/themes/">Careers</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
                                 </ul>
 
                             </div>
@@ -513,7 +513,7 @@
                                 <li><a href="http://wordpress.org/support/forum/requests-and-feedback">Enterprise ADM</a></li>
                                 <li><a href="http://wordpress.org/extend/plugins/">Enterprise Mobility</a></li>
                                 <li><a href="http://wordpress.org/support/">Business Intelligence and Analytics</a></li>
-                                <li><a href="http://wordpress.org/extend/themes/">Data Warehouse</a></li>
+                                <li><a href="careers.html">Data Warehouse</a></li>
                                 <li><a href="#">CRM Solutions</a></li>
                             </ul>
 
@@ -534,7 +534,7 @@
             <div id="copyrights">
                 <div class="container clearfix">
                     <div class="col_half">
-                        Copyrights &amp;copy; 2015 UBNSoft Solutions | Developed by <a href="http://nlbstudios.com/" class="nlb" target="_blank">NLB</a> <a href="http://nlbstudios.com/" target="_blank" class="nlbs">Studios</a>
+                        Copyrights &#169; 2015 UBNSoft Solutions | Developed by <a href="http://nlbstudios.com/" class="nlb" target="_blank">NLB</a> <a href="http://nlbstudios.com/" target="_blank" class="nlbs">Studios</a>
                         <br>
                         <div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
                     </div>
