--- a/testhome.html
+++ b/testhome.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="SemiColonWeb" />
+    <meta name="author" content="NLB Studios" />
     <!-- Stylesheets
     ============================================= -->
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic" rel="stylesheet" type="text/css" />
@@ -576,7 +576,7 @@
                                     <li><a href="http://wordpress.org/support/forum/requests-and-feedback">Engagement Models</a></li>
                                     <li><a href="http://wordpress.org/extend/plugins/">Blogs</a></li>
                                     <li><a href="http://wordpress.org/support/">Sitemap</a></li>
-                                    <li><a href="http://wordpress.org/extend/themes/">Careers</a></li>
+                                    <li><a href="careers.html">Careers</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -626,7 +626,7 @@
                                 <li><a href="http://wordpress.org/support/forum/requests-and-feedback">Enterprise ADM</a></li>
                                 <li><a href="http://wordpress.org/extend/plugins/">Enterprise Mobility</a></li>
                                 <li><a href="http://wordpress.org/support/">Business Intelligence and Analytics</a></li>
-                                <li><a href="http://wordpress.org/extend/themes/">Data Warehouse</a></li>
+                                <li><a href="careers.html">Data Warehouse</a></li>
                                 <li><a href="#">CRM Solutions</a></li>
                             </ul>
                         </div>
@@ -639,7 +639,7 @@
             <div id="copyrights">
                 <div class="container clearfix">
                     <div class="col_half">
-                        Copyrights &amp;copy; 2015 UBNSoft Solutions | Developed by <a href="http://nlbstudios.com/" class="nlb" target="_blank">NLB</a> <a href="http://nlbstudios.com/" target="_blank" class="nlbs">Studios</a>
+                        Copyrights &#169; 2015 UBNSoft Solutions | Developed by <a href="http://nlbstudios.com/" class="nlb" target="_blank">NLB</a> <a href="http://nlbstudios.com/" target="_blank" class="nlbs">Studios</a>
                         <br>
                         <div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
                     </div>
